k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftista
  namespace: craftista
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 5000
          - path: /api/origamis
            pathType: Prefix
            backend:
              service:
                name: voting
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
